--- a/docs/.vitepress/style.css
+++ b/docs/.vitepress/style.css
@@ -12,3 +12,13 @@
 .VPDoc.has-aside .content-container {
   max-width: 1000px !important;
 }
+
+.vp-doc table {
+  table-layout: fixed;
+}
+
+.vp-doc table,
+.vp-doc table thead,
+.vp-doc table tbody {
+  width: 100%;
+}
