[perf]优化文档配置

--- a/docs/.vitepress/style/reset.css
+++ b/docs/.vitepress/style/reset.css
@@ -12,3 +12,9 @@
 .VPDoc.has-aside .content-container {
   max-width: 1000px !important;
 }
+
+iframe {
+  width: 100%;
+  height: fit-content;
+  overflow: hidden;
+}
