[feat]薪资全局代码展开样式

--- a/docs/.vitepress/style/custom.less
+++ b/docs/.vitepress/style/custom.less
@@ -23,6 +23,9 @@ details {
     display: flex;
     justify-content: flex-end;
   }
+  .lang {
+    display: none;
+  }
   &[open] {
     .code-btn {
       background-color: rgb(29, 33, 41);
