[perf]完善文档样式

--- a/docs/.vitepress/style/custom.less
+++ b/docs/.vitepress/style/custom.less
@@ -63,3 +63,15 @@
     }
   }
 }
+
+.VPHero {
+  .container {
+    .main {
+      .heading {
+        .text {
+          max-width: 750px;
+        }
+      }
+    }
+  }
+}
