[refacotr]修改部分主题色

--- a/docs/.vitepress/style/custom.less
+++ b/docs/.vitepress/style/custom.less
@@ -3,17 +3,19 @@
   --vp-c-brand-2: rgb(62, 122, 255);
   --vp-c-brand-3: rgb(22, 93, 255);
   --vp-sidebar-bg-color: #fff;
-  --border-color: rgb(229, 230, 235);
+  // --vp-c-text-2: rgb(29, 33, 41);
   --vp-layout-max-width: 100%;
   --vp-sidebar-width: 260px;
   --vp-nav-height: 60px;
   --content-max-width: 1000px;
+  --border-color: rgb(229, 230, 235);
 }
 
 .dark {
   --vp-c-brand-1: rgb(62, 122, 255);
   --vp-c-brand-2: rgb(22, 93, 255);
   --vp-c-brand-3: rgb(62, 122, 255);
+  // --vp-c-text-2: rgba(255, 255, 255, 0.9);
   --vp-sidebar-bg-color: #161618;
   --border-color: #333335;
 }
