[perf]完成样式主题重构

--- a/docs/.vitepress/style/global.less
+++ b/docs/.vitepress/style/global.less
@@ -1,7 +1,7 @@
 .cell-demo {
   margin-top: 24px;
   padding: 48px;
-  border: 1px solid var(--border-color);
+  border: 1px solid var(--vp-color-border);
   border-radius: 2px 2px 0 0;
 }
 
