--- a/docs/.vitepress/style/custom.less
+++ b/docs/.vitepress/style/custom.less
@@ -3,26 +3,32 @@
   --vp-c-brand-2: rgb(62, 122, 255);
   --vp-c-brand-3: rgb(22, 93, 255);
   --vp-sidebar-bg-color: #fff;
-  // --vp-c-text-2: rgb(29, 33, 41);
   --vp-layout-max-width: 100%;
   --vp-sidebar-width: 260px;
   --vp-nav-height: 60px;
   --content-max-width: 1000px;
-  --border-color: rgb(229, 230, 235);
+  --vp-color-border: rgb(229, 230, 235);
+  --vp-menu-group-color: rgb(134, 144, 156);
+  --vp-menu-item-color: rgb(29, 33, 41);
+  --vp-menu-item-active-color: rgb(22, 93, 255);
+  --vp-menu-item-hover: rgb(242, 243, 245);
 }
 
 .dark {
   --vp-c-brand-1: rgb(62, 122, 255);
   --vp-c-brand-2: rgb(22, 93, 255);
   --vp-c-brand-3: rgb(62, 122, 255);
-  // --vp-c-text-2: rgba(255, 255, 255, 0.9);
   --vp-sidebar-bg-color: #161618;
-  --border-color: #333335;
+  --vp-color-border: #333335;
+  --vp-menu-group-color: rgba(255, 255, 255, 0.5);
+  --vp-menu-item-color: rgba(255, 255, 255, 0.9);
+  --vp-menu-item-active-color: rgb(60, 126, 255);
+  --vp-menu-item-hover: rgba(255, 255, 255, 0.08);
 }
 
 .Layout {
   .VPNav {
-    border-bottom: 1px solid var(--border-color);
+    border-bottom: 1px solid var(--vp-color-border);
     .VPNavBar {
       .wrapper {
         .container {
@@ -42,14 +48,59 @@
   }
   .VPSidebar {
     padding-top: 0;
+    padding: 0 12px;
     margin-top: var(--vp-nav-height);
-    border-right: 1px solid var(--border-color);
+    border-right: 1px solid var(--vp-color-border);
     &::-webkit-scrollbar {
       display: none;
     }
-    .VPSidebarNav {
+    #VPSidebarNav {
       .group {
-        border-bottom: 0;
+        border-top: 0 !important;
+        width: 100%;
+        .level-0 {
+          padding: 0 12px;
+
+          .item[role='button'] {
+            height: 40px;
+            .text {
+              color: var(--vp-menu-group-color);
+              font-weight: 400;
+              line-height: 40px;
+            }
+          }
+          .items {
+            .VPSidebarItem {
+              border-radius: 4px;
+              &:not(:last-child) {
+                margin-bottom: 4px;
+              }
+              &:hover {
+                background-color: var(--vp-menu-item-hover);
+              }
+              .item {
+                padding: 0 12px 0 20px;
+                height: 40px;
+                .text {
+                  height: 100%;
+                  color: var(--vp-menu-item-color);
+                  line-height: 40px;
+                  font-weight: 400;
+                  padding: 0;
+                }
+              }
+              &.is-active {
+                background-color: var(--vp-menu-item-hover);
+                .item {
+                  .text {
+                    transition: all 0.2s cubic-bezier(0, 0, 1, 1);
+                    color: var(--vp-menu-item-active-color);
+                  }
+                }
+              }
+            }
+          }
+        }
       }
     }
   }
