[perf]优化文档内容

--- a/docs/.vitepress/style/custom.less
+++ b/docs/.vitepress/style/custom.less
@@ -47,8 +47,7 @@
     }
   }
   .VPSidebar {
-    padding-top: 0;
-    padding: 0 12px;
+    padding: 0 12px 20px;
     margin-top: var(--vp-nav-height);
     border-right: 1px solid var(--vp-color-border);
     &::-webkit-scrollbar {
