[fix]处理封面样式问题

--- a/docs/.vitepress/style/custom.less
+++ b/docs/.vitepress/style/custom.less
@@ -116,14 +116,14 @@
   }
 }
 
-.VPHero {
-  .container {
-    .main {
-      .heading {
-        .text {
-          max-width: 750px;
-        }
-      }
-    }
-  }
-}
+// .VPHero {
+//   .container {
+//     .main {
+//       .heading {
+//         .text {
+//           max-width: 750px;
+//         }
+//       }
+//     }
+//   }
+// }
