--- a/docs/.vitepress/style/custom.less
+++ b/docs/.vitepress/style/custom.less
@@ -12,6 +12,13 @@
   --vp-menu-item-color: rgb(29, 33, 41);
   --vp-menu-item-active-color: rgb(22, 93, 255);
   --vp-menu-item-hover: rgb(242, 243, 245);
+  --vp-text-background-image: linear-gradient(
+    125deg,
+    #47caff,
+    #165dff 40%,
+    #af40ff
+  );
+  --vp-hero-image-bg: radial-gradient(circle, #a8c5ff, #165dff);
 }
 
 .dark {
@@ -24,6 +31,18 @@
   --vp-menu-item-color: rgba(255, 255, 255, 0.9);
   --vp-menu-item-active-color: rgb(60, 126, 255);
   --vp-menu-item-hover: rgba(255, 255, 255, 0.08);
+  --vp-text-background-image: linear-gradient(
+    125deg,
+    #47caff,
+    #3e7aff 45%,
+    #c16eff
+  );
+  --vp-hero-image-bg: radial-gradient(
+    circle,
+    #8ab2ff 0%,
+    #3e7aff 40%,
+    #161d35 85%
+  );
 }
 
 .Layout {
@@ -116,14 +135,20 @@
   }
 }
 
-// .VPHero {
-//   .container {
-//     .main {
-//       .heading {
-//         .text {
-//           max-width: 750px;
-//         }
-//       }
-//     }
-//   }
-// }
+.VPHero {
+  .container {
+    .main {
+      .heading {
+        .name {
+          background-image: var(--vp-text-background-image);
+          background-size: 100%;
+          background-repeat: repeat;
+          -webkit-background-clip: text;
+          background-clip: text;
+          -webkit-text-fill-color: transparent;
+          color: var(--vp-c-brand-1);
+        }
+      }
+    }
+  }
+}
