[perf]处理全局code样式

--- a/docs/.vitepress/style/global.less
+++ b/docs/.vitepress/style/global.less
@@ -5,6 +5,19 @@
   border-radius: 2px 2px 0 0;
 }
 
+code {
+  padding: 2px 8px;
+  color: rgb(78, 89, 105) !important;
+  background-color: rgb(242, 243, 245) !important;
+}
+
+.dark {
+  code {
+    color: rgba(255, 255, 255, 0.7) !important;
+    background-color: rgb(46, 46, 48) !important;
+  }
+}
+
 /* 系统滚动条颜色 */
 ::-webkit-scrollbar {
   width: 6px;
