[fix]解决样式问题

--- a/docs/.vitepress/style/custom.less
+++ b/docs/.vitepress/style/custom.less
@@ -48,6 +48,7 @@
 .Layout {
   .VPNav {
     border-bottom: 1px solid var(--vp-color-border);
+    background-color: var(--vp-nav-bg-color);
     .VPNavBar {
       .wrapper {
         .container {
@@ -66,8 +67,7 @@
     }
   }
   .VPSidebar {
-    padding: 0 12px 20px;
-    margin-top: var(--vp-nav-height);
+    padding: var(--vp-nav-height) 12px 20px;
     border-right: 1px solid var(--vp-color-border);
     &::-webkit-scrollbar {
       display: none;
