[fix]解决移动端的样式问题

--- a/docs/.vitepress/style/custom.less
+++ b/docs/.vitepress/style/custom.less
@@ -128,6 +128,7 @@
         .content {
           .content-container {
             max-width: var(--content-max-width);
+            overflow-x: auto;
           }
         }
       }
