--- a/docs/.vitepress/style/custom.less
+++ b/docs/.vitepress/style/custom.less
@@ -45,7 +45,20 @@
   );
 }
 
+html {
+  overflow: hidden;
+  body {
+    height: 100vh;
+    width: 100vw;
+    #app {
+      height: 100%;
+      width: 100%;
+    }
+  }
+}
+
 .Layout {
+  height: 100%;
   .VPNav {
     border-bottom: 1px solid var(--vp-color-border);
     background-color: var(--vp-nav-bg-color);
@@ -123,7 +136,10 @@
     }
   }
   .VPContent {
+    height: 100%;
     .VPDoc {
+      height: 100%;
+      overflow: auto;
       &.has-aside {
         .content {
           .content-container {
