解决移动端的样式问题

--- a/docs/.vitepress/style/custom.less
+++ b/docs/.vitepress/style/custom.less
@@ -45,23 +45,11 @@
   );
 }
 
-#app {
+body {
   height: 100vh;
-  .Layout {
-    height: 100%;
-    .VPContent {
-      height: 100%;
-      &.is-home {
-        overflow: auto;
-        &::-webkit-scrollbar {
-          display: none;
-        }
-      }
-      .VPDoc {
-        height: 100%;
-        overflow: auto;
-      }
-    }
+  overflow: auto;
+  &::-webkit-scrollbar {
+    display: none;
   }
 }
 
