--- a/docs/.vitepress/style/custom.less
+++ b/docs/.vitepress/style/custom.less
@@ -53,6 +53,7 @@
   }
 }
 
+// 文档页
 .Layout {
   .VPNav {
     border-bottom: 1px solid var(--vp-color-border);
@@ -136,7 +137,9 @@
         .content {
           .content-container {
             max-width: var(--content-max-width);
-            overflow-x: auto;
+          }
+          .vp-adaptive-theme {
+            margin: 16px 0;
           }
         }
       }
@@ -144,6 +147,7 @@
   }
 }
 
+// 首页
 .VPHero {
   .container {
     .main {
