[perf]优化部分页面的样式问题

--- a/docs/.vitepress/style/custom.less
+++ b/docs/.vitepress/style/custom.less
@@ -63,6 +63,10 @@
               .VPNavBarTitle {
                 .title {
                   border-bottom-color: transparent;
+                  & > span {
+                    line-height: 20px;
+                    color: var(--vp-c-brand-1);
+                  }
                 }
               }
             }
