--- a/docs/.vitepress/style/custom.less
+++ b/docs/.vitepress/style/custom.less
@@ -65,7 +65,6 @@
                   border-bottom-color: transparent;
                   & > span {
                     line-height: 20px;
-                    color: var(--vp-c-brand-1);
                   }
                 }
               }
@@ -142,6 +141,12 @@
               max-width: var(--content-max-width);
               .vp-adaptive-theme {
                 margin: 16px 0;
+                .lang {
+                  display: none;
+                }
+                code {
+                  background: transparent !important;
+                }
               }
             }
           }
