--- a/docs/.vitepress/style/custom.less
+++ b/docs/.vitepress/style/custom.less
@@ -139,6 +139,15 @@
           .content {
             .content-container {
               max-width: var(--content-max-width);
+              // .main {
+              //   .vp-doc {
+              //     max-width: var(--content-max-width);
+              //     overflow: auto;
+              //     &::-webkit-scrollbar {
+              //       display: none;
+              //     }
+              //   }
+              // }
               .vp-adaptive-theme {
                 margin: 16px 0;
                 .lang {
